<resources>
    <string name="app_name">Catetin</string>
    <string name="grup_name">By Kelompok X</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome_desc">Log in untuk melanjutkan</string>
    <string name="et_email_hint">Masukkan alamat email anda</string>
    <string name="et_pass_hint">Masukkan password akun anda</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="tidak_punya_akun">Tidak Punya Akun?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="sudah_punya_akun">sudah punya akun</string>
    <string name="Nickname">nickname</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="et_nickname_hint">Masukkan nickname anda</string>
    <string name="et_nomor_hint">Masukkan nomor handphone anda</string>
    <string name="welcome_desc2">Silakan buat akun anda</string>
    <string name="verifikasi_lupa_password">Verifikasi Lupa Password</string>
    <string name="kirim">Kirim</string>
    <string name="kirim_veri">Kirim Verifikasi Lupa Password ke email anda</string>
    <string name="Pemasukkan">Pemasukkan</string>
    <string name="total_pemasukkan">Total Pemasukkan</string>
    <string name="konfirmasi">KONFIRMASI</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="total_pengeluaran">Total Pengeluaran</string>
    <string name="hapus_produk">Hapus Produk</string>
    <string name="id_produk">ID Produk</string>
    <string name="lanjut">LANJUT</string>
    <string name="ubah_produk">Ubah Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="ubah">Ubah</string>
    <string name="permintaan_anda_berhasl_diproses">Permintaan Anda Berhasl Diproses!</string>
    <string name="antar_produk">Antar Produk</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="harga_total">Harga Total</string>
    <string name="alamat_pembeli">Alamat Pembeli</string>
    <string name="nomor_pesanan">Nomor Pesanan</string>
    <string name="lihat_produk">Lihat Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="saldo">Saldo :</string>
    <string name="totalsaldo">Rp. 100.000</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="hapus_akun_desc">Silakan Konfirmasi Pernyataan Berikut</string>
    <string name="tambah_akun">Tambah Akun</string>
    <string name="tambah_akun_desc">Masukkan Data Diri Anda</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="edit_akun_desc">Silahkan Ubah Data Anda</string>
    <string name="namamu">Namamu</string>
    <string name="namamu_desc">.@yourname</string>
    <string name="keluar">Keluar</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="pesanan_0002142">Pesanan No. 0002142</string>
    <string name="pesanan_0002143">Pesanan No. 0002143</string>
    <string name="pesanan_0002144">Pesanan No. 0002144</string>
    <string name="pesanan_0002145">Pesanan No. 0002145</string>
    <string name="pesanan_0002146">Pesanan No. 0002146</string>
    <string name="pesanan_0002147">Pesanan No. 0002147</string>
    <string name="pesanan_0002148">Pesanan No. 0002148</string>
    <string name="pesanan_0002149">Pesanan No. 0002149</string>
    <string name="sudah_daftar">Sudah Daftar</string>
    <string name="belum_daftar">Belum Daftar</string>
    <string name="pesanan_aktif">Pesanan Aktif</string>
</resources>