<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HapusProduk2Activity"
    android:background="@color/hijau_bg"
    tools:ignore="Autofill, ContentDescription, LabelFor" >

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:background="@color/transparant"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pt_sans_narrow"
        android:text="@string/hapus_produk"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="349dp"
        android:layout_height="527dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:paddingTop="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/nama_produk"
                android:textColor="@color/abuabu"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/nama_produk"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawablePadding="12dp"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <TextView
                android:layout_marginTop="34dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/harga_beli"
                android:textColor="@color/abuabu"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/harga_beli"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawablePadding="12dp"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <TextView
                android:layout_marginTop="34dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/harga_jual"
                android:textColor="@color/abuabu"
                android:textSize="14sp"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/harga_jual"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:drawablePadding="12dp"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <Button
                android:id="@+id/lanjut"
                android:layout_width="260dp"
                android:layout_marginTop="54dp"
                android:layout_height="50dp"
                android:layout_marginBottom="91dp"
                android:background="@drawable/btn_green"
                android:foreground="?android:attr/selectableItemBackground"
                android:stateListAnimator="@null"
                android:text="@string/ubah"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@null"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>